--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -9,15 +9,15 @@
   <head>     
 
    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-CQ9VF1NFBF"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RVE04545X3"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-CQ9VF1NFBF');
+  gtag('config', 'G-RVE04545X3');
 </script>
- 
+
    
     <meta name="google-site-verification" content="6hmuXTU0JXiDN_dXAsRBLWQoDYBteD4Bki2cq5sBwVY" />
     <title>Minjia Li's Homepage</title>
